--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -29,11 +29,21 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install --upgrade build setuptools wheel
         pip install -r requirements.txt
         pip install pytest pytest-asyncio httpx
+        pip install -e .
+
+    - name: List installed packages
+      run: |
+        pip list
+
+    - name: Show current directory structure
+      run: |
+        pwd
+        ls -la
+        python -c "import sys; print('\n'.join(sys.path))"
 
     - name: Run tests
-      env:
-        PYTHONPATH: ${{ github.workspace }}/lang-portal/backend-fastapi
       run: |
-        pytest tests/api/ -v
+        PYTHONPATH=. python -m pytest tests/api/ -v
