--- a/lang-portal/toki-pona-api/requirements.txt
+++ b/lang-portal/toki-pona-api/requirements.txt
@@ -1,8 +1,7 @@
-fastapi[all]==0.115.8
+fastapi[standard]==0.115.8
 sqlalchemy==2.0.38
 alembic==1.14.1
 
 # Testing
 pytest==8.3.4
 pytest-asyncio==0.25.3
-httpx==0.28.1
