Initialize Alembic migrations
Correct database name in .env.example
Congifure Alembic for migrations
Create Alembic README
Create Alembic script template

Rebuild `lang-portal` from scratch for Toki Pona language #4

--- a/lang-portal/toki-pona-api/.env.example
+++ b/lang-portal/toki-pona-api/.env.example
@@ -1,5 +1,5 @@
 # Database configuration
-DATABASE_URL=sqlite:///./toki-pona.db
+DATABASE_URL=sqlite:///./tokipona.db
 
 # API configuration
 API_V1_PREFIX=/api/v1
