--- a/lang-portal/toki-pona-api/pyproject.toml
+++ b/lang-portal/toki-pona-api/pyproject.toml
@@ -10,8 +10,20 @@ dependencies = [
     "uvicorn>=0.22.0",
     "sqlalchemy>=2.0.0",
     "alembic>=1.11.0",
+    "psycopg2-binary>=2.9.0",
+    "python-dotenv>=1.0.0",
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.11"
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.0.0",
+    "pytest-cov>=4.1.0",
+    "pytest-asyncio>=0.23.0",
+    "httpx>=0.26.0",
+]
 
 [build-system]
 requires = ["setuptools>=61.0"]
@@ -20,4 +32,6 @@ build-backend = "setuptools.build_meta"
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
-addopts = "-v --cov=src"
+addopts = "-v --cov=src --cov-report=term-missing"
+asyncio_mode = "strict"
+asyncio_default_fixture_loop_scope = "function"
