--- a/lang-portal/toki-pona-api/.env.example
+++ b/lang-portal/toki-pona-api/.env.example
@@ -5,4 +5,5 @@ SQLALCHEMY_ECHO=false
 # API configuration
 API_V1_PREFIX=/api/v1
 PROJECT_NAME="Toki Pona API"
-CORS_ORIGINS=["http://localhost:8000", "http://localhost:3000"]
+CORS_ORIGINS='["http://localhost:3000"]'
+PAGE_SIZE=100
