--- a/lang-portal/toki-pona-api/pyproject.toml
+++ b/lang-portal/toki-pona-api/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
+    "ruff>=0.9.7",
 ]
 requires-python = ">=3.11"
 
