--- a/writing-app/pyproject.toml
+++ b/writing-app/pyproject.toml
@@ -5,11 +5,15 @@ description = "Sitelen Pona AI Learning Prototype"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "mediapipe>=0.10.14",
     "numpy>=2.2.3",
     "opencv-python>=4.11.0.86",
     "pillow>=11.1.0",
     "ruff>=0.9.7",
     "streamlit>=1.42.2",
     "streamlit-drawable-canvas>=0.9.3",
+    "tensorflow>=2.14.0",
+    "tensorflow-hub>=0.16.1",
+    "tensorflow-macos>=2.14.0",
     "watchdog>=6.0.0",
 ]
