--- a/writing-app/pyproject.toml
+++ b/writing-app/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "numpy>=2.2.3",
     "opencv-python>=4.11.0.86",
     "pillow>=11.1.0",
+    "pytest>=8.3.4",
     "ruff>=0.9.7",
     "streamlit>=1.42.2",
     "streamlit-drawable-canvas>=0.9.3",
