--- a/.github/workflows/writing-app-tests.yml
+++ b/.github/workflows/writing-app-tests.yml
@@ -24,10 +24,17 @@ jobs:
         python-version: '3.11'
         cache: 'pip'
 
-    - name: Install dependencies
+    - name: Install pip-tools
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -e .
+        python -m pip install pip-tools
+
+    - name: Generate requirements.txt
+      run: pip-compile pyproject.toml
+
+    - name: Install dependencies
+      run: |
+        python -m pip install -r requirements.txt
         python -m pip install pytest
 
     - name: Install system dependencies
