--- a/writing-app/pyproject.toml
+++ b/writing-app/pyproject.toml
@@ -13,9 +13,19 @@ dependencies = [
     "numpy>=2.2.3",
     "opencv-python>=4.11.0.86",
     "pillow>=11.1.0",
-    "pytest>=8.3.4",
     "ruff>=0.9.7",
     "streamlit>=1.42.2",
     "streamlit-drawable-canvas>=0.9.3",
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.3.4",
+]
+dev = [
     "watchdog>=6.0.0",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
