Add setuptools configuration to specify app.py as a module

--- a/writing-app/pyproject.toml
+++ b/writing-app/pyproject.toml
@@ -2,6 +2,10 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+py-modules = ["app"]  # This tells setuptools that app.py is a module
+package-dir = {"" = "."}  # Look for packages in the current directory
+
 [project]
 name = "sitelen-pona-ai"
 version = "0.1.0"
