--- a/.github/workflows/writing-app-tests.yml
+++ b/.github/workflows/writing-app-tests.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
+        pip install pytest
 
     - name: Install system dependencies
       run: |
