--- a/.github/workflows/writing-app-tests.yml
+++ b/.github/workflows/writing-app-tests.yml
@@ -28,13 +28,23 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install pytest
+        pip install pytest streamlit-testing
 
     - name: Install system dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y libgl1 ffmpeg libsm6 libxext6
 
+    - name: Create models directory
+      run: |
+        mkdir -p models
+
     - name: Run tests
+      env:
+        STREAMLIT_BROWSER_GATHER_USAGE_STATS: false
+        STREAMLIT_SERVER_ADDRESS: localhost
+        STREAMLIT_SERVER_PORT: 8501
+        STREAMLIT_SERVER_HEADLESS: true
+        PYTHONPATH: ${{ github.workspace }}/writing-app
       run: |
         python -m pytest tests/test_app.py -v
