--- a/.github/workflows/writing-app-tests.yml
+++ b/.github/workflows/writing-app-tests.yml
@@ -18,28 +18,23 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-        cache: 'pip'
-
-    - name: Install dependencies
+    - name: Install `uv`
       run: |
-        python -m pip install --upgrade pip
-        pip install .
-        pip install pytest streamlit-testing
+        curl -fsSL https://astral.sh/uv/install.sh | sh
+        echo "$HOME/.local/bin" >> $GITHUB_PATH  # Ensure `uv` is in PATH
+        uv --version  # Verify installation
+
+    - name: Sync dependencies with `uv`
+      run: |
+        uv sync
+        uv pip list  # Debugging step to check installed packages
 
     - name: Install system dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y libgl1 ffmpeg libsm6 libxext6
 
-    - name: Create models directory
-      run: |
-        mkdir -p models
-
-    - name: Run tests
+    - name: Start Streamlit App (Run in Background)
       env:
         STREAMLIT_BROWSER_GATHER_USAGE_STATS: false
         STREAMLIT_SERVER_ADDRESS: localhost
@@ -47,4 +42,18 @@ jobs:
         STREAMLIT_SERVER_HEADLESS: true
         PYTHONPATH: ${{ github.workspace }}/writing-app
       run: |
-        python -m pytest tests/test_app.py -v
+        streamlit run app.py &
+        sleep 3  # Allow time for Streamlit to initialize
+
+    - name: Create models directory
+      run: mkdir -p models
+
+    - name: Run tests with Debug Logging
+      run: |
+        pytest tests/test_app.py -v --log-cli-level=INFO
+
+    - name: Run Streamlit App Action (Recommended)
+      uses: streamlit/streamlit-app-action@v0.0.3
+      with:
+        app-path: 'writing-app/app.py'
+        ruff: true
