--- a/.github/workflows/writing-app-tests.yml
+++ b/.github/workflows/writing-app-tests.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python
+    - name: Set up Python 3.11
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
@@ -33,6 +33,14 @@ jobs:
       run: |
         uv sync
         uv pip list  # Debugging step to check installed packages
+
+    - name: Activate virtual environment
+      run: |
+        echo "VIRTUAL_ENV=$(uv venv)" >> $GITHUB_ENV
+        echo "$VIRTUAL_ENV/bin" >> $GITHUB_PATH
+        echo "Python binary: $(which python)"
+        echo "Streamlit binary: $(which streamlit)"
+        echo "Pytest binary: $(which pytest)"
 
     - name: Install system dependencies
       run: |
