--- a/.github/workflows/writing-app-tests.yml
+++ b/.github/workflows/writing-app-tests.yml
@@ -30,6 +30,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest  # Ensure pytest is installed
         pip list  # Debugging step to check installed packages
 
     - name: Install system dependencies
