fix: update CI workflow to only run writing-app tests
- Add explicit cd to writing-app directory
- Set PYTHONPATH and rootdir to ensure correct test discovery

--- a/.github/workflows/writing-app-tests.yml
+++ b/.github/workflows/writing-app-tests.yml
@@ -54,7 +54,8 @@ jobs:
 
     - name: Run tests with Debug Logging
       run: |
-        pytest tests/test_app.py -v --log-cli-level=INFO
+        cd ${{ github.workspace }}/writing-app
+        PYTHONPATH=${{ github.workspace }}/writing-app pytest tests/test_app.py -v --log-cli-level=INFO --rootdir=${{ github.workspace }}/writing-app
 
     - name: Run Streamlit App Action (Recommended)
       uses: streamlit/streamlit-app-action@v0.0.3
