Add Test Suite for Sitelen Pona Writing App (#25)
* Add initial tests for Sitelen Pona Writing Practice App

- Added pytest as a dependency in pyproject.toml
- Updated uv.lock to include new dependencies for pytest
- Created 13 tests for the app, including:
  - Basic app loading and title tests
  - Input mode selector tests
  - Character selector tests
  - Sidebar settings tests
  - Reference toggle interaction tests
  - Stroke thickness interaction tests
  - Mode switching tests
  - Learn tab features tests
  - Random character selection tests
  - Character selection callback tests
  - Debug mode features tests

#24

* Update README.md to include new section on testing

- Updated README.md to include a new section on testing.
- Added instructions for running tests locally.
- Described the scope of the test suite, including UI components and interactions.

#24

* Add GitHub Actions workflow for writing app tests

- Created a new GitHub Actions workflow file `.github/workflows/writing-app-tests.yml`
- The workflow triggers on push and pull request events for the `writing-app` directory
- It sets up Python 3.11, installs dependencies, and runs tests using pytest

#24

* Update GitHub Actions workflow to generate requirements.txt from pyproject.toml

* Add build-system section to pyproject.toml

* Use pip to install directly from pyproject.toml

* Reorganize dependencies and use editable install in tests

* Update pip install command

* Add setuptools configuration to specify app.py as a module

* Remove automatic model download in favor of manual download

* Update system dependencies for OpenCV

* Explicitly install pytest in CI

* Add Streamlit testing setup and environment variables

* Refactor GitHub Actions workflow to use `uv`

Use uv for dependency management and enhance test execution with debug logging

* Set up Python 3.11 in GitHub Actions workflow

* Update GitHub Actions workflow

Set up Python 3.11 and activate virtual environment

* Explictly activate e

--- a/writing-app/pyproject.toml
+++ b/writing-app/pyproject.toml
@@ -1,3 +1,11 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = ["app"]  # This tells setuptools that app.py is a module
+package-dir = {"" = "."}  # Look for packages in the current directory
+
 [project]
 name = "sitelen-pona-ai"
 version = "0.1.0"
@@ -12,5 +20,16 @@ dependencies = [
     "ruff>=0.9.7",
     "streamlit>=1.42.2",
     "streamlit-drawable-canvas>=0.9.3",
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.3.4",
+]
+dev = [
     "watchdog>=6.0.0",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
