--- a/signing-app/pyproject.toml
+++ b/signing-app/pyproject.toml
@@ -5,6 +5,7 @@ description = "Luka Pona Learning App"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "fastdtw>=0.3.4",
     "imageio>=2.37.0",
     "mediapipe>=0.10.21",
     "numpy>=1.26.4",
