--- a/agentic-workflow/pyproject.toml
+++ b/agentic-workflow/pyproject.toml
@@ -6,8 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "anthropic>=0.49.0",
-    "nltk>=3.9.1",
+    "google-api-python-client>=2.163.0",
     "python-dotenv>=1.0.1",
-    "whisper>=1.1.10",
     "youtube-transcript-api>=0.6.3",
 ]
