--- a/agentic-workflow/pyproject.toml
+++ b/agentic-workflow/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.11"
 dependencies = [
     "anthropic>=0.49.0",
     "google-api-python-client>=2.163.0",
+    "pydub>=0.25.1",
     "python-dotenv>=1.0.1",
+    "pytube>=15.0.0",
+    "speechrecognition>=3.14.1",
     "youtube-transcript-api>=0.6.3",
 ]
