--- a/agentic-workflow/requirements.txt
+++ b/agentic-workflow/requirements.txt
@@ -68,9 +68,13 @@ pydantic==2.10.6
     # via anthropic
 pydantic-core==2.27.2
     # via pydantic
+pydub==0.25.1
+    # via agentic-workflow (pyproject.toml)
 pyparsing==3.2.1
     # via httplib2
 python-dotenv==1.0.1
+    # via agentic-workflow (pyproject.toml)
+pytube==15.0.0
     # via agentic-workflow (pyproject.toml)
 requests==2.32.3
     # via
@@ -82,12 +86,15 @@ sniffio==1.3.1
     # via
     #   anthropic
     #   anyio
+speechrecognition==3.14.1
+    # via agentic-workflow (pyproject.toml)
 typing-extensions==4.12.2
     # via
     #   anthropic
     #   anyio
     #   pydantic
     #   pydantic-core
+    #   speechrecognition
 uritemplate==4.1.1
     # via google-api-python-client
 urllib3==2.3.0
